[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfdna-gen"
version = "1.0.0"
description = "Conditional Causal Transformer for Cell-Free DNA Sequence Generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kyle Redelinghuys", email = "kyle@eabhaseq.com" }
]
keywords = [
    "cfdna",
    "cell-free-dna",
    "nipt",
    "genomics",
    "transformer",
    "sequence-generation",
    "bioinformatics",
    "deep-learning",
    "prenatal-testing",
    "synthetic-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
hub = [
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "tqdm>=4.60.0",
]
all = [
    "cfdna-gen[hub,dev]",
]

[project.urls]
Homepage = "https://github.com/eabhaseq/cfdna-gen"
Repository = "https://github.com/eabhaseq/cfdna-gen"
Documentation = "https://github.com/eabhaseq/cfdna-gen#readme"
Issues = "https://github.com/eabhaseq/cfdna-gen/issues"

[tool.hatch.build.targets.wheel]
packages = ["cfdna_gen"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["cfdna_gen"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["cfdna_gen"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
